# mathsym.py

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV-README.md  DOCUMENTATION.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: architecture.md  blueprint.md  documentation.md  issues_and_solutions.md  plan.md  symbols.md  todolist.md
examples/: comprehensive_test.py  demo.py
mathsym/: __init__.py  __main__.py  cli.py  transpiler.py
mathsym/mappings/: AlgebraSymbols.py  BasicSymbols.py  Calculus_AnalysisSymbols.py  GeometrySymbols.py  GreekSymbols.py  LogicSymbols.py  NumberSymbols.py  SetTheorySymbols.py  StatisticalSymbols.py  __init__.py
tests/: test_transpiler.py
